--- a/Apps/index.html
+++ b/Apps/index.html
@@ -29,6 +29,7 @@
     <div id="cesiumContainer"></div>
     <script>
       var viewer = new Cesium.Viewer("cesiumContainer");
+      viewer.dataSources.add(Cesium.KmlDataSource.load("./data/minamialps_agri.kml"));
     </script>
   </body>
 </html>
