--- a/Apps/index.html
+++ b/Apps/index.html
@@ -38,6 +38,8 @@
       sceneModePicker:false,
       navigationHelpButton:false
       });
+      viewer.camera.flyTo({
+      destination : Cesium.Cartesian3.fromDegrees(138.469695, 35.632175, 100000.0)});
       viewer.dataSources.add(Cesium.KmlDataSource.load("./data/minamialps_agri.kml"));
     </script>
   </body>
